--- a/index.html
+++ b/index.html
@@ -63,6 +63,51 @@
         </div>
 
     </section>
+    <section class="quem-somos">
+        <h2>Quem somos:</h2>
+        <div class="card-conteiner">
+            <div class="cards">A empresa de serviços contábeis e fiscais - Técnicos Associados S\C  Ltda, foi fundada por Carlos de Araújo Alves, em 1990.
+                No ano de 1992, a empresa passou a ter como razão social LM CONTABILIDADE – Serviços contábeis, fiscais e de recursos humanos, a partir da fusão de novos sócios, Luiz Xavier da Silva e Mirtes de Lustoza Xavier.
+                </div>
+            <div class="cards">
+                A equipe tem uma vasta experiência com os serviços fiscais e contábeis, estando em constante atualização conforme as transformações na legislação vigente. Conta com um suporte de informações inteligente para melhor operar na área comercial, nas diversas atividades, sejam elas econômicas e/ou tributárias.
+                A empresa tem sede própria, estabelecida na Rua Firmino Tavares, nº 521, centro, Barro – CE.
+
+            </div>
+            <div class="cards">
+        
+                </h2>
+                Luiz Xavier da Silva: Graduação em Administração de Empresas (Faculdade Leão Sampaio – 2005). Especialização em Direito Tributário e Tributos Federais (Faculdade Leão Sampaio – 2006).
+                Mirtes de Lustoza Alves: Graduação em Pedagogia (Universidade do Vale do Acaraú - 2004). Graduação em Contabilidade (Faculdade Leão Sampaio – 2007).
+
+            </div>
+
+        </div>
+    </section>
+    <section class="nossosservicos">
+        <h2>Nossos serviços: </h2>
+        <div class="card-conteiner2">
+            <div class="cards2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea laboriosam harum voluptatem, eum mollitia iste aspernatur quos, at voluptates facere exercitationem natus. Quis atque perferendis incidunt eum laudantium. Qui, adipisci.
+                </div>
+            <div class="cards2">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet doloribus, eligendi a mollitia quisquam enim placeat dolores quae, ipsam ex molestiae ducimus ut hic non odit. Eos accusantium doloremque quisquam?
+
+            </div>
+            <div class="cards2">
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis a voluptatibus, est ut nisi delectus commodi ullam quibusdam, sequi culpa inventore sit incidunt, possimus in quas voluptatum asperiores quae. Reiciendis?
+            </div>
+
+        </div>
+    </section>
+    <section class="parceiros">
+        <h2>Nossos parceiros</h2>
+        <div class="parceiros-conteiner">
+           <div class="logos-parceiros"><img src="https://static.vecteezy.com/ti/vetor-gratis/t1/17401146-logotipo-de-pessoas-de-sucesso-marca-de-trabalho-em-equipe-e-logotipo-de-negocios-comunidade-dees-unidade-colorida-e-amizade-logotipo-de-cuidado-de-trabalho-em-equipe-de-parceiros-vetor.jpg" alt=""></div>
+           <div class="logos-parceiros"><img src="https://static.vecteezy.com/ti/vetor-gratis/t1/17401146-logotipo-de-pessoas-de-sucesso-marca-de-trabalho-em-equipe-e-logotipo-de-negocios-comunidade-dees-unidade-colorida-e-amizade-logotipo-de-cuidado-de-trabalho-em-equipe-de-parceiros-vetor.jpg" alt=""></div>
+           <div class="logos-parceiros"><img src="https://static.vecteezy.com/ti/vetor-gratis/t1/17401146-logotipo-de-pessoas-de-sucesso-marca-de-trabalho-em-equipe-e-logotipo-de-negocios-comunidade-dees-unidade-colorida-e-amizade-logotipo-de-cuidado-de-trabalho-em-equipe-de-parceiros-vetor.jpg" alt=""></div>
+        </div>
+    </section>
 
   
 
